# nnamdibot

./: .gitignore  README.md  index.html  main.js  main.py  pyproject.toml  requirements.txt  style.css  vercel.json
api/: index.py
frontend/: main.js
