[project]
name = "nnamdibot"
version = "0.1.0"
description = "Health & wellness chatbot powered by AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "ipykernel>=7.2.0",
    "openai>=2.37.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.47.0",
]
